--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,9 +2,10 @@
 
 #header {
     position: fixed;
+    z-index: 1001;
     width: 100%;
     height: 60px;
-    background-color: rgba(37, 43, 52, 0.96);
+    background-color: rgba(37, 43, 52, 0.91);
     top: 0;
     left: 0;
     border: 1px solid #555;
@@ -44,9 +45,16 @@
 
 
 #header nav ul li:hover {
-    background-color: rgba(62, 88, 100, 0.95);
+    background-color: rgba(62, 88, 100, 0.91);
     outline: 0;
 }
 
 
-/*background-color: rgba(96, 140, 154, 0.96);*/
+/*Background Image*/
+
+body    {
+    background: url(Camera.jpg) no-repeat;
+    background-size: 100%;
+}
+
+
